--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?25645332');
-  src: url('../font/fontello.eot?25645332#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?25645332') format('woff2'),
-       url('../font/fontello.woff?25645332') format('woff'),
-       url('../font/fontello.ttf?25645332') format('truetype'),
-       url('../font/fontello.svg?25645332#fontello') format('svg');
+  src: url('../font/fontello.eot?9067184');
+  src: url('../font/fontello.eot?9067184#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?9067184') format('woff2'),
+       url('../font/fontello.woff?9067184') format('woff'),
+       url('../font/fontello.ttf?9067184') format('truetype'),
+       url('../font/fontello.svg?9067184#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?25645332#fontello') format('svg');
+    src: url('../font/fontello.svg?9067184#fontello') format('svg');
   }
 }
 */
@@ -55,7 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-twitter-squared:before { content: '\e800'; font-size: 130px; margin-top: 65px;} /* '' */
-.icon-github-squared:before { content: '\e801'; font-size: 130px; margin-top: 65px;} /* '' */
-.icon-gplus-squared:before { content: '\e802'; font-size: 130px; margin-top: 65px;} /* '' */
-.icon-steam-squared:before { content: '\e803'; font-size: 130px; margin-top: 65px;} /* '' */
+.icon-github:before { content: '\e800'; font-size: 130px; margin-top: 65px} /* '' */
+.icon-gplus:before { content: '\e801'; font-size: 130px; margin-top: 65px} /* '' */
+.icon-steam:before { content: '\e802'; font-size: 130px; margin-top: 65px} /* '' */
+.icon-twitter:before { content: '\e804'; font-size: 130px; margin-top: 65px} /* '' */
