--- a/css/fontello-ie7-codes.css
+++ b/css/fontello-ie7-codes.css
@@ -1,5 +1,15 @@
+.icon-twitter {
+    *zoom: expression( this.runtimeStyle['zoom']='1', this.innerHTML='&#xe800;&nbsp;');
+}
 
-.icon-twitter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
-.icon-github { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
-.icon-gplus { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
-.icon-steam { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
+.icon-github {
+    *zoom: expression( this.runtimeStyle['zoom']='1', this.innerHTML='&#xe801;&nbsp;');
+}
+
+.icon-gplus {
+    *zoom: expression( this.runtimeStyle['zoom']='1', this.innerHTML='&#xe802;&nbsp;');
+}
+
+.icon-steam {
+    *zoom: expression( this.runtimeStyle['zoom']='1', this.innerHTML='&#xe803;&nbsp;');
+}
